REFV-207: updated to HAPI 8.8.1, Java 21